--- a/FrontEnd/src/Components/style.module.css
+++ b/FrontEnd/src/Components/style.module.css
@@ -42,3 +42,10 @@
     display: block !important;
    }
   }
+  .end{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5%;
+  }
